--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 body {
-  background-color: rgb(48, 48, 48) !important;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* background-color: rgb(48, 48, 48) !important; */
+  background-image: url(https://thietbiketnoi.com/wp-content/uploads/2020/01/tong-hop-hinh-nen-background-vector-designer-dep-do-phan-giai-fhd-2k-4k-moi-nhat-2.jpg);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -82,6 +86,7 @@ body {
   margin-right: 10px;
 }
 .todos {
+  overflow-y: scroll;
   width: 100%;
   height: 500px;
   margin-top: 50px;
@@ -107,7 +112,7 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 .todo-list li span {
-  color: #fff;
+  color: white;
   /* font-size: 13px */
 }
 .editBtn {
@@ -163,3 +168,15 @@ body {
   opacity: 30%;
 }
 /* --------------------------------------- */
+.completed {
+  text-decoration: line-through; /* Kiểu gạch ngang cho nhiệm vụ đã hoàn thành */
+  color: #888; /* Màu chữ xám cho nhiệm vụ đã hoàn thành */
+}
+.form-check-input {
+  margin-right: 30px;
+}
+/* CSS cho nhiệm vụ đã đến hạn */
+.deadline-passed {
+  text-decoration: line-through; /* Gạch ngang nhiệm vụ đã đến hạn */
+}
+/* -------- */
