--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* background-color: rgb(48, 48, 48) !important; */
   background-image: url(https://thietbiketnoi.com/wp-content/uploads/2020/01/tong-hop-hinh-nen-background-vector-designer-dep-do-phan-giai-fhd-2k-4k-moi-nhat-2.jpg);
   display: flex;
   align-items: center;
@@ -152,7 +151,6 @@ body {
   width: 100px;
   z-index: 100;
   height: 100px;
-  /* margin: auto; */
   top: 50%;
   position: absolute;
   left: 50%;
@@ -170,7 +168,6 @@ body {
 /* --------------------------------------- */
 .completed {
   text-decoration: line-through; /* Kiểu gạch ngang cho nhiệm vụ đã hoàn thành */
-  color: #888; /* Màu chữ xám cho nhiệm vụ đã hoàn thành */
 }
 .form-check-input {
   margin-right: 30px;
@@ -178,5 +175,6 @@ body {
 /* CSS cho nhiệm vụ đã đến hạn */
 .deadline-passed {
   text-decoration: line-through; /* Gạch ngang nhiệm vụ đã đến hạn */
+  text-decoration-color: yellow;
 }
 /* -------- */
