--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,8 +1,8 @@
-/* style.css */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 #messenger-container {
