--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,6 +96,8 @@ body {
   -moz-box-shadow: 9px 21px 30px -19px rgba(0, 0, 0, 0.63);
   box-shadow: 9px 21px 30px -19px rgba(0, 0, 0, 0.63);
 }
+
+/* ----------- */
 .todo-list {
   list-style-type: none;
   padding: 0;
