--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,6 +114,7 @@ body {
 }
 .todo-list li span {
   color: white;
+  display: flex;
 }
 .editBtn {
   cursor: pointer;
@@ -178,3 +179,9 @@ body {
   text-decoration-color: yellow;
 }
 /* -------- */
+.fa-trash-alt {
+  cursor: pointer;
+}
+.fa-edit {
+  cursor: pointer;
+}
